Fix layout issues: proper background positioning, pet centering, and z-index fixes

--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,6 @@
 
 @layer components {
   #pet-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     transition: top 4s ease-in-out, left 4s ease-in-out;
   }
 }
